--- a/css/airspace.css
+++ b/css/airspace.css
@@ -3,7 +3,7 @@
  * In airspace, it is called style.css
  * However, style.css now holds additional styles for this jekyll port. (Not written by ThemeFisher)
  * The original style.css is now called airspace.css
- * 
+ *
  */
 
 @import url(//fonts.googleapis.com/css?family=Open+Sans:400,300,600);
@@ -367,7 +367,7 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 #global-header:before {
   content: "";
-  position: absolute;
+  position: relative;
   left: 0;
   top: 0;
   bottom: 0;
