--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
             <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">
-              <img src="{{ site.baseurl }}/img/logo.gif" alt="Logo">
+              <img src="{{ site.baseurl }}/img/logosmall.gif" alt="Logo">
             </a>
           </div>
         </nav>
