--- a/css/airspace.css
+++ b/css/airspace.css
@@ -74,6 +74,7 @@ header .navbar {
 }
 header .navbar-brand {
   padding-top: 5px;
+  background: linear-gradient(to left, #8b86a3, #322e40);
 }
 header .navbar-default {
   background: none;
