--- a/css/airspace.css
+++ b/css/airspace.css
@@ -74,6 +74,9 @@ header .navbar {
 }
 header .navbar-brand {
   padding-top: 5px;
+  opacity: 0.8;
+  color: #E3E3E4;
+  background: #E3E3E4;
 }
 header .navbar-default {
   background: none;
@@ -106,6 +109,8 @@ font header .navbar-default .navbar-nav li a:hover {
   background-position: 10% 0%;
   padding: 200px 0 280px 0;
   position: relative;
+  background: linear-gradient(to left, #928dab, #1f1c2c 70%);
+  opacity: 0.8;
 }
 #slider:before {
   content: "";
@@ -368,6 +373,8 @@ font header .navbar-default .navbar-nav li a:hover {
   position: relative;
   background-attachment: fixed;
   background-position: 10% 0%;
+  background: linear-gradient(to left, #928dab, #1f1c2c 70%);
+  opacity: 0.8;
 }
 #global-header:before {
   content: "";
