--- a/css/airspace.css
+++ b/css/airspace.css
@@ -74,6 +74,7 @@ header .navbar {
 }
 header .navbar-brand {
   padding-top: 5px;
+  padding-bottom: 5px;
   opacity: 0.6;
 }
 header .navbar-default {
