--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
               <img src="{{ site.baseurl }}/img/outpaced.gif" alt="Logo">
             </a>
           </div>
